<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>org</groupId>
  <artifactId>text2epub</artifactId>
  <version>1.0</version>
  <packaging>jar</packaging>

  <name>text2epub</name>
  <url>http://maven.apache.org</url>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
  </properties>

  <build>
    <plugins>
      <plugin>
        <artifactId>maven-assembly-plugin</artifactId>
        <version>3.7.0</version>
        <configuration>
          <descriptorRefs>
            <descriptorRef>jar-with-dependencies</descriptorRef>
          </descriptorRefs>
          <archive>
            <manifest>
              <mainClass>text2epub.Text2Epub</mainClass>
            </manifest>
          </archive>
        </configuration>
        <executions>
          <execution>
            <id>make-assembly</id>
            <phase>package</phase>
            <goals>
              <goal>single</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.13.0</version>
        <configuration>
          <source>11</source>
          <target>11</target>
        </configuration>
      </plugin>
      <plugin>
        <groupId>com.github.cradloff</groupId>
        <artifactId>fit-maven-plugin</artifactId>
        <version>3.2</version>
        <executions>
          <execution>
            <id>fixture</id>
            <phase>test</phase>
            <goals>
              <goal>run</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
      <plugin>
            <artifactId>maven-resources-plugin</artifactId>
            <version>3.3.1</version>
            <executions>
                <execution>
                    <id>copy-resource-one</id>
                    <phase>install</phase>
                    <goals>
                        <goal>copy-resources</goal>
                    </goals>

                    <configuration>
                        <outputDirectory>${env.HOME}/bin</outputDirectory>
                        <resources>
                            <resource>
                                <directory>/${basedir}/target</directory>
                                <includes>
                                    <include>*-jar-with-dependencies.jar</include>
                                </includes>
                            </resource>
                            <resource>
                                <directory>/${basedir}</directory>
                                <includes>
                                    <include>*.sh</include>
                                </includes>
                            </resource>
                        </resources>
                    </configuration>
                </execution>
           </executions>
        </plugin>
    </plugins>
  </build>

  <dependencies>
    <!-- Txtmark - Java markdown processor -->
    <dependency>
      <groupId>com.github.rjeschke</groupId>
      <artifactId>txtmark</artifactId>
      <version>0.13</version>
    </dependency>
    <!-- Freemarker -->
    <dependency>
      <groupId>org.freemarker</groupId>
      <artifactId>freemarker-gae</artifactId>
      <version>2.3.32</version>
    </dependency>
    <!-- Textile-J -->
    <dependency>
      <groupId>net.java</groupId>
      <artifactId>textile-j</artifactId>
      <version>2.2</version>
    </dependency>
    <!-- AsciidoctorJ -->
    <dependency>
      <groupId>org.asciidoctor</groupId>
      <artifactId>asciidoctorj</artifactId>
      <version>2.5.12</version>
    </dependency>
    <dependency>
        <groupId>org.w3c</groupId>
        <artifactId>epubcheck</artifactId>
        <version>5.1.0</version>
    </dependency>
    <dependency>
      <groupId>org.apache.commons</groupId>
      <artifactId>commons-lang3</artifactId>
      <version>3.14.0</version>
    </dependency>
    
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter</artifactId>
      <version>5.10.2</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.assertj</groupId>
      <artifactId>assertj-core</artifactId>
      <version>3.25.3</version>
      <scope>test</scope>
    </dependency>
    
    <dependency>
      <groupId>com.c2.fit</groupId>
      <artifactId>fit</artifactId>
      <version>1.1</version>
    </dependency>
  </dependencies>
</project>
